--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ placeholder="Search subject or year (e.g. DS, 2023)">
   <div class="accordion-item">
     <button class="accordion-header">CS Notes</button>
     <div class="accordion-body">
-      <a href="du-pyq/notes/cpp_notes.pdf" target="_blank">C++ Notes</a>
+      <a href="cpp_notes_unit1.pdf" target="_blank">C++ Notes</a>
       <a href="du-pyq/notes/python_notes.pdf" target="_blank">Python Notes</a>
     </div>
   </div>
@@ -393,5 +393,6 @@ document.getElementById("resourceSearch").onkeyup=function(){
 
 </body>
 </html>
+
 
 
