--- a/index.html
+++ b/index.html
@@ -13,250 +13,87 @@
   font-family:'Segoe UI',sans-serif;
   scroll-behavior:smooth;
 }
+body{background:#0d0d0d;color:white}
 
-body{
-  background:#0d0d0d;
-  color:white;
-}
+/* NAVBAR */
+header{position:sticky;top:0;background:#0d0d0d;z-index:100}
+.navbar{display:flex;justify-content:space-between;align-items:center;padding:20px 10%}
+.logo{color:#ff4d4d;font-size:24px;font-weight:bold}
+.navbar ul{list-style:none;display:flex;gap:20px}
+.navbar a{color:white;text-decoration:none}
+.navbar a:hover{color:#ff4d4d}
 
-/* ===== NAVBAR ===== */
-header{
-  position:sticky;
-  top:0;
-  background:#0d0d0d;
-  z-index:100;
-}
+/* HERO */
+.hero{min-height:100vh;display:flex;align-items:center;justify-content:space-between;padding:60px 10%;gap:60px}
+.hero-text h4{color:#aaa}
+.hero-text h1{font-size:3rem;margin:10px 0}
+.hero-text h2{font-weight:300;color:#d9d9d9}
+#typing{color:#ff4d4d;border-right:3px solid #ff4d4d;padding-right:6px;animation:blink .7s infinite}
+@keyframes blink{50%{border-color:transparent}}
 
-.navbar{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:20px 10%;
-}
-
-.logo{
-  color:#ff4d4d;
-  font-size:24px;
-  font-weight:bold;
-}
-
-.navbar ul{
-  list-style:none;
-  display:flex;
-  gap:20px;
-}
-
-.navbar a{
-  color:white;
-  text-decoration:none;
-}
-
-.navbar a:hover{
-  color:#ff4d4d;
-}
-
-/* ===== HERO ===== */
-.hero{
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:60px 10%;
-  gap:60px;
-}
-
-.hero-text h4{
-  color:#aaa;
-  letter-spacing:2px;
-}
-
-.hero-text h1{
-  font-size:3rem;
-  margin:10px 0;
-}
-
-.hero-text h2{
-  font-weight:300;
-  color:#d9d9d9;
-}
-
-/* Typing Effect */
-#typing{
-  color:#ff4d4d;
-  border-right:3px solid #ff4d4d;
-  padding-right:6px;
-  animation:blink 0.7s infinite;
-}
-
-@keyframes blink{
-  50%{border-color:transparent;}
-}
-
-/* ===== BIG RIGHT IMAGE ===== */
-.hero-image{
-  position:relative;
-}
-
+/* IMAGE */
 .hero-image::before{
   content:'';
   position:absolute;
-  width:480px;
-  height:90vh;
+  width:480px;height:90vh;
   background:#ff4d4d;
   filter:blur(160px);
   z-index:-1;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
+  top:50%;left:50%;
+  transform:translate(-50%,-50%)
 }
-
 .hero-image img{
-  width:420px;
-  height:85vh;          /* FULL SCREEN FEEL */
-  object-fit:cover;
-  object-position:center;
-  border-radius:16px;
-  padding:4px;
-  background:linear-gradient(135deg,#ff4d4d,#ff9a9a,#ff4d4d);
+  width:420px;height:85vh;
+  object-fit:cover;border-radius:16px;
   filter:grayscale(100%);
-  box-shadow:0 30px 80px rgba(255,77,77,0.45);
-  transition:0.5s ease;
+  transition:.5s
+}
+.hero-image img:hover{filter:grayscale(0);transform:scale(1.02)}
+
+/* SECTIONS */
+.section{padding:80px 10%;text-align:center}
+.dark{background:#141414}
+.section-title{font-size:2.4rem;color:#ff4d4d;margin-bottom:20px}
+
+/* SKILLS */
+.skills-box{display:flex;justify-content:center;flex-wrap:wrap;gap:15px}
+.skill{padding:12px 25px;border:1px solid #ff4d4d;border-radius:30px}
+.skill:hover{background:#ff4d4d}
+
+/* RESOURCES */
+.resource-search{
+  width:100%;max-width:400px;
+  padding:12px;margin:20px auto;
+  display:block;border:none;border-radius:5px
+}
+.accordion-item{margin-bottom:15px}
+.accordion-header{
+  width:100%;padding:15px;
+  background:#ff4d4d;color:white;
+  border:none;font-size:18px;
+  cursor:pointer;text-align:left
+}
+.accordion-body{
+  display:none;
+  padding:15px;
+  background:#1f1f1f
+}
+.accordion-body a{
+  display:block;
+  margin:8px 0;
+  color:#ff9a9a;
+  text-decoration:none
 }
 
-.hero-image img:hover{
-  filter:grayscale(0%);
-  transform:translateY(-6px) scale(1.02);
-}
+/* CONTACT */
+.contact-form{max-width:500px;margin:auto;display:flex;flex-direction:column;gap:15px}
+.contact-form input,.contact-form textarea{padding:12px;border:none;border-radius:5px}
+.contact-form button{padding:12px;background:#ff4d4d;border:none;color:white;border-radius:5px}
 
-/* ===== SECTIONS ===== */
-.section{
-  padding:80px 10%;
-  text-align:center;
-}
-
-.dark{
-  background:#141414;
-}
-
-.section-title{
-  font-size:2.4rem;
-  color:#ff4d4d;
-  margin-bottom:20px;
-}
-
-/* ===== ABOUT ===== */
-.about-text{
-  max-width:800px;
-  margin:auto;
-  line-height:1.7;
-  color:#d9d9d9;
-}
-
-/* ===== SKILLS ===== */
-.skills-box{
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:center;
-  gap:15px;
-}
-
-.skill{
-  padding:12px 25px;
-  border:1px solid #ff4d4d;
-  border-radius:30px;
-}
-
-.skill:hover{
-  background:#ff4d4d;
-}
-
-/* ===== CONTACT ===== */
-.contact-info{
-  margin-bottom:25px;
-  font-size:18px;
-}
-
-.contact-info a{
-  color:#ff4d4d;
-  text-decoration:none;
-}
-
-.contact-form{
-  max-width:500px;
-  margin:auto;
-  display:flex;
-  flex-direction:column;
-  gap:15px;
-}
-
-.contact-form input,
-.contact-form textarea{
-  padding:12px;
-  border:none;
-  border-radius:5px;
-}
-
-.contact-form button{
-  padding:12px;
-  background:#ff4d4d;
-  border:none;
-  color:white;
-  border-radius:5px;
-  cursor:pointer;
-}
-
-.contact-form button:hover{
-  background:#ff1a1a;
-}
-
-/* ===== SOCIAL ===== */
-.social-links{
-  margin-top:30px;
-  display:flex;
-  justify-content:center;
-  gap:15px;
-  flex-wrap:wrap;
-}
-
-.social-links a{
-  padding:10px 18px;
-  border-radius:30px;
-  border:1px solid #ff4d4d;
-  color:white;
-  text-decoration:none;
-}
-
-.social-links a:hover{
-  background:#ff4d4d;
-}
-
-.resume-btn{
-  background:#ff4d4d;
-}
-
-/* ===== WHATSAPP ===== */
-.whatsapp-float{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  background:#25d366;
-  color:white;
-  font-size:26px;
-  padding:15px 18px;
-  border-radius:50%;
-  text-decoration:none;
-}
-
-/* ===== RESPONSIVE ===== */
+/* RESPONSIVE */
 @media(max-width:768px){
-  .hero{
-    flex-direction:column-reverse;
-    text-align:center;
-  }
-  .hero-image img{
-    width:260px;
-    height:60vh;
-  }
+.hero{flex-direction:column-reverse;text-align:center}
+.hero-image img{width:260px;height:60vh}
 }
 </style>
 </head>
@@ -265,134 +102,147 @@ header{
 
 <header>
 <nav class="navbar">
-  <div class="logo">AVANISH PRAJAPATI</div>
-  <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
+<div class="logo">AVANISH PRAJAPATI</div>
+<ul>
+<li><a href="#about">About</a></li>
+<li><a href="#skills">Skills</a></li>
+<li><a href="#resources">PYQs</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
 </nav>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-  <div class="hero-text">
-    <h4>DATA ANALYST</h4>
-    <h1>Hi, I'm <span id="typing"></span></h1>
-    <h2>B.Sc (Hons) Computer Science</h2>
-    <h2>Delhi University</h2>
-  </div>
-
-  <div class="hero-image">
-    <img src="avanish.jpeg" alt="Avanish">
-  </div>
+<div class="hero-text">
+<h4>DATA ANALYST</h4>
+<h1>Hi, I'm <span id="typing"></span></h1>
+<h2>B.Sc (Hons) Computer Science</h2>
+<h2>Delhi University</h2>
+</div>
+<div class="hero-image">
+<img src="avanish.jpeg">
+</div>
 </section>
 
-<!-- ABOUT -->
 <section id="about" class="section">
 <h2 class="section-title">About Me</h2>
-<p class="about-text">
-I am <b>Avanish</b>, pursuing <b>B.Sc (Hons) Computer Science</b> from a
-<b>Delhi University</b> college. I have strong interest in programming,
-problem solving and web development. Skilled in <b>C++, Python and MS Excel</b>,
-and actively preparing for internships and technical roles.
-</p>
+<p>I am Avanish, pursuing B.Sc (Hons) Computer Science from Delhi University.</p>
 </section>
 
-<!-- SKILLS -->
 <section id="skills" class="section dark">
 <h2 class="section-title">My Skills</h2>
 <div class="skills-box">
-  <div class="skill">C++</div>
-  <div class="skill">Python</div>
-  <div class="skill">MS Excel</div>
-  <div class="skill">HTML</div>
-  <div class="skill">CSS</div>
-  
+<div class="skill">C++</div>
+<div class="skill">Python</div>
+<div class="skill">MS Excel</div>
+<div class="skill">HTML</div>
+<div class="skill">CSS</div>
 </div>
-</section><section id="resources" class="section dark">
-<h2 class="section-title">DU CS PYQs & Notes</h2>
+</section>
 
-<input type="text" id="resourceSearch" class="resource-search"
-placeholder="Search subject or year (e.g. DS, 2023)">
+<section id="resources" class="section dark">
+<h2 class="section-title">DU CS PYQs & Notes</h2>
+<input type="text" id="resourceSearch" class="resource-search" placeholder="Search subject">
 
 <div class="accordion">
 
-  <div class="accordion-item">
-    <button class="accordion-header">Semester 1</button>
-    <div class="accordion-body">
-      <a href="du-pyq/cs/sem1/programming_fundamentals_2022.pdf" target="_blank">
-        Programming Fundamentals (2022)
-      </a>
-    </div>
-  </div>
+<!-- SEM 1 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 1</button>
+<div class="accordion-body">
+<a href="#">Programming Fundamentals</a>
+<a href="#">Mathematics</a>
+<a href="#">Digital Logic</a>
+</div>
+</div>
 
-  <div class="accordion-item">
-    <button class="accordion-header">CS Notes</button>
-    <div class="accordion-body">
-      <a href="cpp_notes_unit1.pdf" target="_blank">C++ Notes</a>
-      <a href="du-pyq/notes/python_notes.pdf" target="_blank">Python Notes</a>
-    </div>
-  </div>
+<!-- SEM 2 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 2</button>
+<div class="accordion-body">
+<a href="#">Data Structures</a>
+<a href="#">Discrete Mathematics</a>
+<a href="#">Computer Architecture</a>
+</div>
+</div>
+
+<!-- SEM 3 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 3</button>
+<div class="accordion-body">
+<a href="#">OOPS with C++</a>
+<a href="#">Operating System</a>
+<a href="#">DBMS</a>
+</div>
+</div>
+
+<!-- SEM 4 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 4</button>
+<div class="accordion-body">
+<a href="#">Software Engineering</a>
+<a href="#">Computer Networks</a>
+<a href="#">Web Technology</a>
+</div>
+</div>
+
+<!-- SEM 5 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 5</button>
+<div class="accordion-body">
+<a href="#">Artificial Intelligence</a>
+<a href="#">Compiler Design</a>
+<a href="#">Data Analytics</a>
+</div>
+</div>
+
+<!-- SEM 6 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 6</button>
+<div class="accordion-body">
+<a href="#">Machine Learning</a>
+<a href="#">Cloud Computing</a>
+<a href="#">Cyber Security</a>
+</div>
+</div>
+
+<!-- NOTES -->
+<div class="accordion-item">
+<button class="accordion-header">CS Notes</button>
+<div class="accordion-body">
+<a href="cpp_notes_unit1">C++ Notes</a>
+<a href="#">Python Notes</a>
+<a href="#">DSA Notes</a>
+</div>
+</div>
 
 </div>
 </section>
 
-<!-- CONTACT -->
 <section id="contact" class="section">
-<h2 class="section-title">Contact Me</h2>
-
-<div class="contact-info">
-📞 <a href="tel:9569092645">9569092645</a><br><br>
-✉ <a href="mailto:avanishpra75@gmail.com">avanishpra75@gmail.com</a>
-</div>
-
-<form class="contact-form">
-  <input type="text" placeholder="Your Name" required>
-  <input type="email" placeholder="Your Email" required>
-  <textarea rows="4" placeholder="Your Message"></textarea>
-  <button type="submit">Send Message</button>
-</form>
-
-<div class="social-links">
-  <a href="https://wa.me/919569092645" target="_blank">WhatsApp</a>
-  <a href="https://www.linkedin.com/in/avanish-prajapati-0971a132b" target="_blank">LinkedIn</a>
-  <a href="https://github.com/" target="_blank">GitHub</a>
-  <a href="resume.pdf" download class="resume-btn">Download Resume</a>
-</div>
+<h2 class="section-title">Contact</h2>
+<p>📞 9569092645<br>✉ avanishpra75@gmail.com</p>
 </section>
-
-<a href="https://wa.me/919569092645" class="whatsapp-float" target="_blank">💬</a>
 
 <script>
-const text = "Avanish";
-let i = 0;
-const speed = 120;
-function typeEffect(){
-  if(i < text.length){
-    document.getElementById("typing").innerHTML += text.charAt(i);
-    i++;
-    setTimeout(typeEffect, speed);
-  }
-}
-typeEffect();
-  document.querySelectorAll(".accordion-header").forEach(btn=>{
-  btn.onclick=()=> {
-    const body=btn.nextElementSibling;
-    body.style.display=body.style.display==="block"?"none":"block";
-  };
+const text="Avanish";let i=0;
+function type(){if(i<text.length){
+document.getElementById("typing").innerHTML+=text.charAt(i++);
+setTimeout(type,120)}}
+type();
+
+document.querySelectorAll(".accordion-header").forEach(b=>{
+b.onclick=()=>{const n=b.nextElementSibling;
+n.style.display=n.style.display==="block"?"none":"block";}
 });
 
 document.getElementById("resourceSearch").onkeyup=function(){
-  const v=this.value.toLowerCase();
-  document.querySelectorAll(".accordion-body a").forEach(a=>{
-    a.style.display=a.textContent.toLowerCase().includes(v)?"block":"none";
-  });
-  };
+const v=this.value.toLowerCase();
+document.querySelectorAll(".accordion-body a").forEach(a=>{
+a.style.display=a.textContent.toLowerCase().includes(v)?"block":"none";
+});
+}
 </script>
 
 </body>
 </html>
-
-
-
