--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 <button class="accordion-header">Semester 2</button>
 <div class="accordion-body">
 <a href="#">Data Structures</a>
-<a href="#">Discrete Mathematics</a>
+<a href="discrete_mathmatics_2022.pdf">Discrete Mathematics</a>
 <a href="#">Computer Architecture</a>
 </div>
 </div>
@@ -246,3 +246,4 @@ a.style.display=a.textContent.toLowerCase().includes(v)?"block":"none";
 
 </body>
 </html>
+
