--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,10 +6,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Segoe UI',sans-serif;
+  scroll-behavior:smooth;
+}
 body{background:#0d0d0d;color:white}
 
-/* NAVBAR */
+/* ===== NAVBAR ===== */
 header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 .navbar{display:flex;justify-content:space-between;align-items:center;padding:20px 10%}
 .logo{color:#ff4d4d;font-size:24px;font-weight:bold}
@@ -19,67 +23,121 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 .navbar a{color:white;text-decoration:none}
 .navbar a:hover{color:#ff4d4d}
 
-/* HERO */
-.hero{min-height:100vh;display:flex;align-items:center;justify-content:space-between;padding:60px 10%}
-.hero-image img{width:420px;height:85vh;object-fit:cover;border-radius:16px}
+/* ===== HERO ===== */
+.hero{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:60px 10%;
+  gap:60px;
+}
+.hero-text h4{color:#aaa}
+.hero-text h1{font-size:3rem;margin:10px 0}
+.hero-text h2{font-weight:300;color:#d9d9d9}
+#typing{
+  color:#ff4d4d;
+  border-right:3px solid #ff4d4d;
+  padding-right:6px;
+  animation:blink .7s infinite;
+}
+@keyframes blink{50%{border-color:transparent}}
 
-/* SECTIONS */
+.hero-image img{
+  width:420px;
+  height:85vh;
+  object-fit:cover;
+  border-radius:16px;
+  filter:grayscale(100%);
+  transition:.5s;
+}
+.hero-image img:hover{
+  filter:grayscale(0);
+  transform:scale(1.02);
+}
+
+/* ===== SECTIONS ===== */
 .section{padding:80px 10%;text-align:center}
 .dark{background:#141414}
 .section-title{font-size:2.4rem;color:#ff4d4d;margin-bottom:20px}
 
-/* FILTERS */
-.filters{
- display:flex;
- justify-content:center;
- gap:15px;
- flex-wrap:wrap;
- margin-bottom:20px;
+/* ===== SKILLS ===== */
+.skills-box{display:flex;justify-content:center;flex-wrap:wrap;gap:15px}
+.skill{
+  padding:12px 25px;
+  border:1px solid #ff4d4d;
+  border-radius:30px;
 }
-.filters select,.filters input{
- padding:12px;
- border:none;
- border-radius:5px;
-}
+.skill:hover{background:#ff4d4d}
 
-/* ACCORDION */
+/* ===== RESOURCES ===== */
+.resource-search{
+  width:100%;
+  max-width:400px;
+  padding:12px;
+  margin:20px auto;
+  display:block;
+  border:none;
+  border-radius:5px;
+}
 .accordion-item{margin-bottom:15px}
 .accordion-header{
- width:100%;padding:15px;
- background:#ff4d4d;
- color:white;border:none;
- font-size:18px;
- cursor:pointer;text-align:left
+  width:100%;
+  padding:15px;
+  background:#ff4d4d;
+  color:white;
+  border:none;
+  font-size:18px;
+  cursor:pointer;
+  text-align:left;
 }
-.accordion-body{display:none;background:#1f1f1f;padding:15px}
+.accordion-body{
+  display:none;
+  padding:15px;
+  background:#1f1f1f;
+}
 .accordion-body a{
- display:block;
- margin:6px 0;
- color:#ff9a9a;
- text-decoration:none
+  display:block;
+  margin:8px 0;
+  color:#ff9a9a;
+  text-decoration:none;
 }
 
-/* CONTACT */
-.social-links{display:flex;justify-content:center;gap:15px;flex-wrap:wrap}
-.social-links a{
- padding:10px 18px;
- border-radius:30px;
- border:1px solid #ff4d4d;
- color:white;text-decoration:none
+/* ===== CONTACT ===== */
+.contact-info{margin-bottom:20px}
+.social-links{
+  display:flex;
+  justify-content:center;
+  gap:15px;
+  flex-wrap:wrap;
 }
+.social-links a{
+  padding:10px 18px;
+  border-radius:30px;
+  border:1px solid #ff4d4d;
+  color:white;
+  text-decoration:none;
+}
+.social-links a:hover{background:#ff4d4d}
 .resume-btn{background:#ff4d4d}
 
-/* WHATSAPP */
+/* ===== WHATSAPP ===== */
 .whatsapp-float{
- position:fixed;
- bottom:20px;
- right:20px;
- background:#25d366;
- font-size:26px;
- padding:15px 18px;
- border-radius:50%;
- color:white;
- text-decoration:none
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#25d366;
+  color:white;
+  font-size:26px;
+  padding:15px 18px;
+  border-radius:50%;
+  text-decoration:none;
+}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:768px){
+  .hero{flex-direction:column-reverse;text-align:center}
+  .hero-image img{width:260px;height:60vh}
 }
 </style>
 </head>
@@ -88,60 +146,111 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 
 <header>
 <nav class="navbar">
-<div class="logo">AVANISH PRAJAPATI</div>
-<ul>
-<li><a href="#resources">PYQs</a></li>
-<li><a href="#contact">Contact</a></li>
-</ul>
+  <div class="logo">AVANISH PRAJAPATI</div>
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#resources">PYQs</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
 </header>
 
-<!-- ================= PYQs ================= -->
-<section id="resources" class="section dark">
-<h2 class="section-title">DU CS PYQs (Year Wise)</h2>
+<!-- ===== HERO ===== -->
+<section class="hero">
+  <div class="hero-text">
+    <h4>DATA ANALYST</h4>
+    <h1>Hi, I'm <span id="typing"></span></h1>
+    <h2>B.Sc (Hons) Computer Science</h2>
+    <h2>Delhi University</h2>
+  </div>
+  <div class="hero-image">
+    <img src="avanish.jpeg" alt="Avanish">
+  </div>
+</section>
 
-<div class="filters">
-<select id="semFilter">
-<option value="all">All Semesters</option>
-<option value="sem1">Semester 1</option>
-<option value="sem2">Semester 2</option>
-<option value="sem3">Semester 3</option>
-<option value="sem4">Semester 4</option>
-<option value="sem5">Semester 5</option>
-<option value="sem6">Semester 6</option>
-</select>
+<!-- ===== ABOUT ===== -->
+<section id="about" class="section">
+<h2 class="section-title">About Me</h2>
+<p>I am Avanish, pursuing B.Sc (Hons) Computer Science from Delhi University.</p>
+</section>
 
-<input type="text" id="searchInput" placeholder="Search subject or year">
+<!-- ===== SKILLS ===== -->
+<section id="skills" class="section dark">
+<h2 class="section-title">My Skills</h2>
+<div class="skills-box">
+  <div class="skill">C++</div>
+  <div class="skill">Python</div>
+  <div class="skill">MS Excel</div>
+  <div class="skill">HTML</div>
+  <div class="skill">CSS</div>
 </div>
+</section>
+
+<!-- ===== PYQs ===== -->
+<section id="resources" class="section dark">
+<h2 class="section-title">DU CS PYQs & Notes</h2>
+<input type="text" id="resourceSearch" class="resource-search" placeholder="Search subject or year">
 
 <div class="accordion">
 
-<!-- SEM 2 -->
-<div class="accordion-item sem2">
-<button class="accordion-header">Semester 2 – Data Structures</button>
+<!-- SEM 1 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 1</button>
 <div class="accordion-body">
-<a href="du-pyq/sem2/data_structures_2024.pdf">Data Structures (2024)</a>
-<a href="du-pyq/sem2/data_structures_2023.pdf">Data Structures (2023)</a>
-<a href="du-pyq/sem2/data_structures_2022.pdf">Data Structures (2022)</a>
+<a href="du-pyq/sem1/programming_fundamentals_2022.pdf" download>Programming Fundamentals (2022)</a>
+<a href="du-pyq/sem1/mathematics_2022.pdf" download>Mathematics for CS (2022)</a>
+<a href="du-pyq/sem1/digital_logic_2022.pdf" download>Digital Logic (2022)</a>
 </div>
 </div>
 
-<div class="accordion-item sem2">
-<button class="accordion-header">Semester 2 – Discrete Mathematics</button>
+<!-- SEM 2 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 2</button>
 <div class="accordion-body">
-<a href="du-pyq/sem2/discrete_math_2024.pdf">Discrete Mathematics (2024)</a>
-<a href="du-pyq/sem2/discrete_mathmatics_2023.pdf">Discrete Mathematics (2023)</a>
-<a href="du-pyq/sem2/discrete_mathmatics_2022.pdf">Discrete Mathematics (2022)</a>
+<a href="du-pyq/sem2/data_structures_2023.pdf" download>Data Structures (2023)</a>
+<a href="du-pyq/sem2/discrete_mathmatics_2023.pdf" download>Discrete Mathematics (2023)</a>
+<a href="du-pyq/sem2/computer_architecture_2023.pdf" download>Computer Architecture (2023)</a>
 </div>
 </div>
 
 <!-- SEM 3 -->
-<div class="accordion-item sem3">
-<button class="accordion-header">Semester 3 – DBMS</button>
+<div class="accordion-item">
+<button class="accordion-header">Semester 3</button>
 <div class="accordion-body">
-<a href="du-pyq/sem3/dbms_2024.pdf">DBMS (2024)</a>
-<a href="du-pyq/sem3/dbms_2023.pdf">DBMS (2023)</a>
-<a href="du-pyq/sem3/dbms_2022.pdf">DBMS (2022)</a>
+<a href="du-pyq/sem3/oops_cpp_2023.pdf" download>OOPS with C++ (2023)</a>
+<a href="du-pyq/sem3/operating_system_2023.pdf" download>Operating System (2023)</a>
+<a href="du-pyq/sem3/dbms_2023.pdf" download>DBMS (2023)</a>
+</div>
+</div>
+
+<!-- SEM 4 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 4</button>
+<div class="accordion-body">
+<a href="du-pyq/sem4/software_engineering_2024.pdf" download>Software Engineering (2024)</a>
+<a href="du-pyq/sem4/computer_networks_2024.pdf" download>Computer Networks (2024)</a>
+<a href="du-pyq/sem4/web_technology_2024.pdf" download>Web Technology (2024)</a>
+</div>
+</div>
+
+<!-- SEM 5 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 5</button>
+<div class="accordion-body">
+<a href="du-pyq/sem5/artificial_intelligence_2024.pdf" download>Artificial Intelligence (2024)</a>
+<a href="du-pyq/sem5/compiler_design_2024.pdf" download>Compiler Design (2024)</a>
+<a href="du-pyq/sem5/data_analytics_2024.pdf" download>Data Analytics (2024)</a>
+</div>
+</div>
+
+<!-- SEM 6 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 6</button>
+<div class="accordion-body">
+<a href="du-pyq/sem6/machine_learning_2024.pdf" download>Machine Learning (2024)</a>
+<a href="du-pyq/sem6/cloud_computing_2024.pdf" download>Cloud Computing (2024)</a>
+<a href="du-pyq/sem6/cyber_security_2024.pdf" download>Cyber Security (2024)</a>
 </div>
 </div>
 
@@ -149,53 +258,58 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 <div class="accordion-item">
 <button class="accordion-header">CS Notes</button>
 <div class="accordion-body">
-<a href="notes/cpp_notes_unit1.pdf">C++ Notes</a>
-<a href="notes/python_notes.pdf">Python Notes</a>
-<a href="notes/dbms_notes.pdf">DBMS Notes</a>
+<a href="notes/cpp_notes_unit1.pdf" download>C++ Notes</a>
+<a href="notes/python_notes.pdf" download>Python Notes</a>
+<a href="notes/dsa_notes.pdf" download>DSA Notes</a>
+<a href="notes/dbms_notes.pdf" download>DBMS Notes</a>
 </div>
 </div>
 
 </div>
 </section>
 
+<!-- ===== CONTACT ===== -->
 <section id="contact" class="section">
-<h2 class="section-title">Contact</h2>
+<h2 class="section-title">Contact Me</h2>
+<div class="contact-info">
+📞 <a href="tel:9569092645">9569092645</a><br>
+✉ <a href="mailto:avanishpra75@gmail.com">avanishpra75@gmail.com</a>
+</div>
+
 <div class="social-links">
 <a href="https://wa.me/919569092645">WhatsApp</a>
 <a href="https://www.linkedin.com/">LinkedIn</a>
-<a href="resume.pdf" download class="resume-btn">Resume</a>
+<a href="https://github.com/">GitHub</a>
+<a href="resume.pdf" download class="resume-btn">Download Resume</a>
 </div>
 </section>
 
 <a href="https://wa.me/919569092645" class="whatsapp-float">💬</a>
 
 <script>
-/* ACCORDION */
-document.querySelectorAll(".accordion-header").forEach(b=>{
- b.onclick=()=> {
-  const body=b.nextElementSibling;
-  body.style.display=body.style.display==="block"?"none":"block";
- };
+const text="Avanish";
+let i=0;
+(function type(){
+  if(i<text.length){
+    document.getElementById("typing").innerHTML+=text.charAt(i++);
+    setTimeout(type,120);
+  }
+})();
+
+document.querySelectorAll(".accordion-header").forEach(btn=>{
+  btn.onclick=()=>{
+    const body=btn.nextElementSibling;
+    body.style.display=body.style.display==="block"?"none":"block";
+  };
 });
 
-/* SEM FILTER */
-document.getElementById("semFilter").onchange=function(){
- const v=this.value;
- document.querySelectorAll(".accordion-item").forEach(i=>{
-  i.style.display=(v==="all"||i.classList.contains(v))?"block":"none";
- });
-};
-
-/* SEARCH */
-document.getElementById("searchInput").onkeyup=function(){
- const v=this.value.toLowerCase();
- document.querySelectorAll(".accordion-body a").forEach(a=>{
-  a.style.display=a.textContent.toLowerCase().includes(v)?"block":"none";
- });
+document.getElementById("resourceSearch").onkeyup=function(){
+  const v=this.value.toLowerCase();
+  document.querySelectorAll(".accordion-body a").forEach(a=>{
+    a.style.display=a.textContent.toLowerCase().includes(v)?"block":"none";
+  });
 };
 </script>
 
 </body>
 </html>
-  
-
