--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 <div class="social-links">
 <a href="https://wa.me/919569092645">WhatsApp</a>
 <a href="https://www.linkedin.com/">LinkedIn</a>
-<a href="https://github.com/">GitHub</a>
+<a href="https://www.linkedin.com/in/avanish-prajapati-0971a132b">GitHub</a>
 <a href="resume.pdf" download class="resume-btn">Download Resume</a>
 </div>
 </section>
@@ -313,3 +313,4 @@ document.getElementById("resourceSearch").onkeyup=function(){
 
 </body>
 </html>
+
