--- a/index.html
+++ b/index.html
@@ -172,7 +172,27 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 <!-- ===== ABOUT ===== -->
 <section id="about" class="section">
 <h2 class="section-title">About Me</h2>
-<p>I am Avanish, pursuing B.Sc (Hons) Computer Science from Delhi University.</p>
+
+  <p class="about-text">
+I am <b>Avanish Prajapati</b>, currently pursuing <b>B.Sc. (Hons) Computer Science</b> 
+from a reputed <b>Delhi University</b> college. I have a strong academic background 
+and a keen interest in <b>programming, data analysis, and problem-solving</b>.  
+
+I am proficient in <b>C++, Python, MS Excel, HTML, and CSS</b>, and I enjoy applying 
+theoretical computer science concepts to real-world problems. I have hands-on 
+experience with <b>data structures, object-oriented programming, and basic web 
+development</b>.  
+
+Along with my coursework, I actively practice <b>Data Analysis</b> using Excel and 
+Python, focusing on data cleaning, analysis, and visualization. I regularly solve 
+coding problems to improve my logical thinking and algorithmic skills.  
+
+I am also preparing with <b>Delhi University previous year question papers (PYQs)</b> 
+to strengthen my conceptual understanding and academic performance. My goal is to 
+secure <b>internships and entry-level roles</b> in the fields of <b>Data Analytics, 
+Software Development, or Technical Research</b>, where I can learn, grow, and 
+contribute effectively.
+  </p>
 </section>
 
 <!-- ===== SKILLS ===== -->
@@ -209,7 +229,7 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 <button class="accordion-header">Semester 2</button>
 <div class="accordion-body">
 <a href="du-pyq/sem2/data_structures_2023.pdf" download>Data Structures (2023)</a>
-<a href="discrete_mathmatics_2022.pdf" download>Discrete Mathematics (2023)</a>
+<a href="discrete_mathmatics_2023.pdf" download>Discrete Mathematics (2023)</a>
 <a href="du-pyq/sem2/computer_architecture_2023.pdf" download>Computer Architecture (2023)</a>
 </div>
 </div>
@@ -278,8 +298,8 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 
 <div class="social-links">
 <a href="https://wa.me/919569092645">WhatsApp</a>
-<a href="https://www.linkedin.com/">LinkedIn</a>
-<a href="https://www.linkedin.com/in/avanish-prajapati-0971a132b">GitHub</a>
+<a href="https://www.linkedin.com/in/avanish-prajapati-0971a132b ">LinkedIn</a>
+<a href="#">GitHub</a>
 <a href="resume.pdf" download class="resume-btn">Download Resume</a>
 </div>
 </section>
@@ -313,5 +333,6 @@ document.getElementById("resourceSearch").onkeyup=function(){
 
 </body>
 </html>
+
 
 
