--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ contribute effectively.
 <button class="accordion-header">CS Notes</button>
 <div class="accordion-body">
 <a href="cpp_notes_unit1.pdf" download>C++ Notes</a>
-<a href="notes/python_notes.pdf" download>Python Notes</a>
+<a href="python.pdf" download>Python Notes</a>
 <a href="notes/dsa_notes.pdf" download>DSA Notes</a>
 <a href="notes/dbms_notes.pdf" download>DBMS Notes</a>
 </div>
@@ -333,6 +333,7 @@ document.getElementById("resourceSearch").onkeyup=function(){
 
 </body>
 </html>
+
 
 
 
