--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@ contribute effectively.
 <div class="accordion-item">
 <button class="accordion-header">Semester 1</button>
 <div class="accordion-body">
-<a href="du-pyq/sem1/programming_fundamentals_2022.pdf" download>Programming Fundamentals (2022)</a>
+<a href="du-pyq/sem1/programming_fundamentals_2022.pdf" download>Object Oriented Programming using Python</a>
 <a href="du-pyq/sem1/mathematics_2022.pdf" download>Mathematics for CS (2022)</a>
-<a href="du-pyq/sem1/digital_logic_2022.pdf" download>Digital Logic (2022)</a>
+<a href="du-pyq/sem1/digital_logic_2022.pdf" download>Computer Science Architecture</a>
 </div>
 </div>
 
@@ -228,9 +228,9 @@ contribute effectively.
 <div class="accordion-item">
 <button class="accordion-header">Semester 2</button>
 <div class="accordion-body">
-<a href="du-pyq/sem2/data_structures_2023.pdf" download>Data Structures (2023)</a>
+<a href="du-pyq/sem2/data_structures_2023.pdf" download>Probability for Computing</a>
 <a href="discrete_mathmatics_2022.pdf" download>Discrete Mathematics (2023)</a>
-<a href="du-pyq/sem2/computer_architecture_2023.pdf" download>Computer Architecture (2023)</a>
+<a href="du-pyq/sem2/computer_architecture_2023.pdf" download>Cplusplus</a>
 </div>
 </div>
 
@@ -238,9 +238,9 @@ contribute effectively.
 <div class="accordion-item">
 <button class="accordion-header">Semester 3</button>
 <div class="accordion-body">
-<a href="du-pyq/sem3/oops_cpp_2023.pdf" download>OOPS with C++ (2023)</a>
+<a href="du-pyq/sem3/oops_cpp_2023.pdf" download>DSA with C++ (2023)</a>
 <a href="du-pyq/sem3/operating_system_2023.pdf" download>Operating System (2023)</a>
-<a href="du-pyq/sem3/dbms_2023.pdf" download>DBMS (2023)</a>
+<a href="du-pyq/sem3/dbms_2023.pdf" download>Artificial Intelligence</a>
 </div>
 </div>
 
@@ -333,6 +333,7 @@ document.getElementById("resourceSearch").onkeyup=function(){
 
 </body>
 </html>
+
 
 
 
