--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@ contribute effectively.
 <div class="accordion-item">
 <button class="accordion-header">Semester 4</button>
 <div class="accordion-body">
-<a href="du-pyq/sem4/software_engineering_2024.pdf" download>Software Engineering (2024)</a>
+<a href="du-pyq/sem4/software_engineering_2024.pdf" download>Design and Analysis of Algorithms(2024)</a>
 <a href="du-pyq/sem4/computer_networks_2024.pdf" download>Computer Networks (2024)</a>
-<a href="du-pyq/sem4/web_technology_2024.pdf" download>Web Technology (2024)</a>
+<a href="du-pyq/sem4/web_technology_2024.pdf" download>DBMS(2024)</a>
 </div>
 </div>
 
@@ -258,9 +258,9 @@ contribute effectively.
 <div class="accordion-item">
 <button class="accordion-header">Semester 5</button>
 <div class="accordion-body">
-<a href="du-pyq/sem5/artificial_intelligence_2024.pdf" download>Artificial Intelligence (2024)</a>
-<a href="du-pyq/sem5/compiler_design_2024.pdf" download>Compiler Design (2024)</a>
-<a href="du-pyq/sem5/data_analytics_2024.pdf" download>Data Analytics (2024)</a>
+<a href="du-pyq/sem5/artificial_intelligence_2024.pdf" download>software engeenring(2024)</a>
+<a href="du-pyq/sem5/compiler_design_2024.pdf" download>Algorithms and advanced data structures(2024)</a>
+<a href="du-pyq/sem5/data_analytics_2024.pdf" download>Machine Learning(2024)</a>
 </div>
 </div>
 
@@ -333,6 +333,7 @@ document.getElementById("resourceSearch").onkeyup=function(){
 
 </body>
 </html>
+
 
 
 
