Revise portfolio layout and content
Updated portfolio content and styling, including new sections and improved layout.

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ header{position:sticky;top:0;background:#0d0d0d;z-index:100}
 <section id="about" class="section">
 <h2 class="section-title">About Me</h2>
 <p class="about-text">
-I am <b>Avanish Prajapati</b>, currently pursuing <b>B.Sc. (Hons) Computer Science</b> 
-from a reputed <b>Delhi University</b> college. I have a strong academic background 
-and a keen interest in <b>programming, data analysis, and problem-solving</b>.  
+I am <b>Avanish Prajapati</b>, pursuing <b>B.Sc. (Hons) Computer Science</b> from Delhi University.  
+I have a passion for programming, data analysis, and web development.  
+I aim to secure internships and roles in <b>Data Analytics, Software Development, or Technical Research</b>.
 </p>
 </section>
 
@@ -221,8 +221,80 @@ and a keen interest in <b>programming, data analysis, and problem-solving</b>.
 <section id="resources" class="section dark">
 <h2 class="section-title">DU CS PYQs & Notes</h2>
 <input type="text" id="resourceSearch" class="resource-search" placeholder="Search subject or year">
+
 <div class="accordion">
-  <!-- Your semester accordion items here (same as before) -->
+
+<!-- SEM 1 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 1</button>
+<div class="accordion-body">
+<a href="du-pyq/sem1/programming_fundamentals_2022.pdf" download>Object Oriented Programming using Python</a>
+<a href="du-pyq/sem1/mathematics_2022.pdf" download>Mathematics for CS (2022)</a>
+<a href="du-pyq/sem1/digital_logic_2022.pdf" download>Computer Science Architecture</a>
+</div>
+</div>
+
+<!-- SEM 2 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 2</button>
+<div class="accordion-body">
+<a href="du-pyq/sem2/data_structures_2023.pdf" download>Probability for Computing</a>
+<a href="du-pyq/sem2/discrete_mathmatics_2022.pdf" download>Discrete Mathematics (2023)</a>
+<a href="du-pyq/sem2/computer_architecture_2023.pdf" download>Cplusplus</a>
+</div>
+</div>
+
+<!-- SEM 3 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 3</button>
+<div class="accordion-body">
+<a href="du-pyq/sem3/oops_cpp_2023.pdf" download>DSA with C++ (2023)</a>
+<a href="du-pyq/sem3/operating_system_2023.pdf" download>Operating System (2023)</a>
+<a href="du-pyq/sem3/dbms_2023.pdf" download>Artificial Intelligence</a>
+</div>
+</div>
+
+<!-- SEM 4 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 4</button>
+<div class="accordion-body">
+<a href="du-pyq/sem4/software_engineering_2024.pdf" download>Design and Analysis of Algorithms(2024)</a>
+<a href="du-pyq/sem4/computer_networks_2024.pdf" download>Computer Networks (2024)</a>
+<a href="du-pyq/sem4/web_technology_2024.pdf" download>DBMS(2024)</a>
+</div>
+</div>
+
+<!-- SEM 5 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 5</button>
+<div class="accordion-body">
+<a href="du-pyq/sem5/artificial_intelligence_2024.pdf" download>Software Engineering (2024)</a>
+<a href="du-pyq/sem5/compiler_design_2024.pdf" download>Algorithms and Advanced Data Structures (2024)</a>
+<a href="du-pyq/sem5/data_analytics_2024.pdf" download>Machine Learning (2024)</a>
+</div>
+</div>
+
+<!-- SEM 6 -->
+<div class="accordion-item">
+<button class="accordion-header">Semester 6</button>
+<div class="accordion-body">
+<a href="du-pyq/sem6/machine_learning_2024.pdf" download>Machine Learning (2024)</a>
+<a href="du-pyq/sem6/cloud_computing_2024.pdf" download>Cloud Computing (2024)</a>
+<a href="du-pyq/sem6/cyber_security_2024.pdf" download>Cyber Security (2024)</a>
+</div>
+</div>
+
+<!-- NOTES -->
+<div class="accordion-item">
+<button class="accordion-header">CS Notes</button>
+<div class="accordion-body">
+<a href="cpp_notes_unit1.pdf" download>C++ Notes</a>
+<a href="python.pdf" download>Python Notes</a>
+<a href="notes/dsa_notes.pdf" download>DSA Notes</a>
+<a href="notes/dbms_notes.pdf" download>DBMS Notes</a>
+</div>
+</div>
+
 </div>
 </section>
 
@@ -241,7 +313,7 @@ and a keen interest in <b>programming, data analysis, and problem-solving</b>.
 <a href="resume.pdf" download class="resume-btn">Download Resume</a>
 </div>
 
-<!-- ===== NEW CONTACT FORM ===== -->
+<!-- ===== CONTACT FORM ===== -->
 <form id="contactForm" style="margin-top:20px;">
   <input id="name" type="text" placeholder="Your Name" required>
   <input id="email" type="email" placeholder="Your Email" required>
